--- a/start/css/style.css
+++ b/start/css/style.css
@@ -153,8 +153,8 @@ template {
 
 :root {
   /* colors */
-  --background: #0E0E0E;
-  --foreground: #F1F1F1;
+  --background: #1F1F1F;
+  --foreground: #EBEBEB;
 
   /* fonts */
   --base-font-size: 18px;
